# psfnova

./: .gitignore  .prettierrc  README.md  flake.nix  flavors.toml  pyproject.toml
charsets/: ascii.txt  bios-graphics.txt  block-elements.txt  cp437.txt  cp737.txt  cp775.txt  cp850.txt  cp852.txt  cp855.txt  cp857.txt  cp858.txt  cp860.txt  cp861.txt  cp863.txt  cp865.txt  cp866.txt  cp869.txt  dec-special-graphics.txt  general-punctuation.txt  iso-8859-1.txt  iso-8859-10.txt  iso-8859-13.txt  iso-8859-14.txt  iso-8859-15.txt  iso-8859-16.txt  iso-8859-2.txt  iso-8859-3.txt  iso-8859-4.txt  iso-8859-5.txt  iso-8859-7.txt  iso-8859-9.txt  koi8_r.txt  koi8_t.txt  koi8_u.txt  kz1048.txt  mac-greek.txt  mac-iceland.txt  mac-latin2.txt  mac-turkish.txt  mac_cyrillic.txt  (+12 more)
fonts/: psfnova-cp437-16x32.psfu  psfnova-cp437-8x16.psfu  psfnova-cp737-16x32.psfu  psfnova-cp737-8x16.psfu  psfnova-cp775-16x32.psfu  psfnova-cp775-8x16.psfu  psfnova-cp850-16x32.psfu  psfnova-cp850-8x16.psfu  psfnova-cp852-16x32.psfu  psfnova-cp852-8x16.psfu  psfnova-cp857-16x32.psfu  psfnova-cp857-8x16.psfu  psfnova-cp858-16x32.psfu  psfnova-cp858-8x16.psfu  psfnova-cp860-16x32.psfu  psfnova-cp860-8x16.psfu  psfnova-cp861-16x32.psfu  psfnova-cp861-8x16.psfu  psfnova-cp863-16x32.psfu  psfnova-cp863-8x16.psfu  psfnova-cp865-16x32.psfu  psfnova-cp865-8x16.psfu  psfnova-cp866-16x32.psfu  psfnova-cp866-8x16.psfu  psfnova-cp869-16x32.psfu  psfnova-cp869-8x16.psfu  psfnova-greek+eastern_european-16x32.psfu  psfnova-greek+eastern_european-8x16.psfu  psfnova-koi8_r-16x32.psfu  psfnova-koi8_r-8x16.psfu  (+6 more)
(+12 files in other folders)
