[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psfnova"
version = "0.1.0"
description = "psfnova font"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "more-itertools>=10.8.0",
    "pillow>=12.0.0",
    "types-pillow>=10.2.0.20240822",
]

[project.scripts]
convert-glyphs = "scripts.convert_glyphs:main"
missing-glyphs = "scripts.missing_glyphs:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["scripts"]
